--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Usando clases, interfaces y tipos con TS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsc -t es6 index.ts && node index.js"
   },
   "repository": {
     "type": "git",
